--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
             </div>
 
-            <div class="col-md-9 weatherInfo">
+            <div class="col-md-9">
                 <div id="currentWeather">
                     <h2>Current Weather Here</h2>
                 </div>
-                <div id="weatherForecast">
+                <div>
                     <h3>5-Day Forecast:</h3>
-                    <div class="row">
+                    <div class="row" id="weatherForecast">
                         <div class="col-md">
                             <div class="card bg-primary">
                                 <div class="card-body">
