Changed button type to Submit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" id="cityInput" placeholder="Enter City">
                         <div class="input-group-append">
-                            <button class="btn btn-primary" type="button" id="submitCity">Go</button>
+                            <button class="btn btn-primary" type="submit" id="submitCity">Go</button>
                         </div>
                     </div>
                 </form>
