Added search icon to search bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Weather Dashboard</title>
 </head>
@@ -24,7 +26,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" id="cityInput" placeholder="Enter City">
                         <div class="input-group-append">
-                            <button class="btn btn-primary" type="submit" id="submitCity">Go</button>
+                            <button type="submit" id="submitCity" class="btn btn-primary fas fa-search"></button>
                         </div>
                     </div>
                 </form>
