--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </form>
 
-                <div id="previousSearch">
+                <div id="previousSearch" class="btn-group-vertical">
 
                 </div>
 
